--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
-    ext.nav_version = '2.2.0'
+    ext{
+        kotlin_version = '1.3.72'
+        nav_version = '2.5.1'
+    }
     repositories {
         google()
         jcenter()
